# LockNT2

./: .gitignore  .replit  ENHANCED_TRACKER_README.md  LIGHTWEIGHT_TRACKING_README.md  README.md  TRACKING_IMPROVEMENTS.md  add_cookies_support.py  app.py  convert_yolo11_to_tfjs.py  cookies.txt  cookies_updated.txt  fallback_sources.py  gunicorn.conf.py  pyproject.toml  replit.md  routes.py  stream_processor.py  test_enhanced_integration.html  test_enhanced_tracking.html  yolo_detector.py
.windsurf/rules/: about-this-app.md
static/css/: style.css
static/js/: crowd_optimization.js  detection.js  integration_example.js  kalman.js  lightweight_tracker.js  occlusion_handler.js  stream.js  tracker-enhanced.js  tracker.js  yolov11-detection.js
static/js/tracker/: appearance.js  hungarian.js  kalman.js  occlusion.js  reidentification.js
static/models/: model_config.json
templates/: index.html
